src/containers/App/NodesTable.scss
.kv-nodes {
    &__host-name-wrapper {
        display: flex;
    }

    &__external-button {
        display: none;
        align-items: center;

        margin-left: 4px;

        transform: translateY(-1px);

        .yc-button__text {
            margin: 0 4px;
        }
    }

    &__host-name {
        overflow: hidden;
    }
}

.data-table__row:hover {
    .kv-nodes__external-button {
        display: inline-flex;
    }
}

